Deploy-Microservices/02-Next-Express-Mongo-Minikube/K8s/local/api_express_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-server
  template:
    metadata:
      labels:
        app: express-server
    spec:
      containers:
      - name: express-server
        image: daspratha/next-be:v1
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: NodePort
  selector:
    app: express-server
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
    # nodePort: 30002
