Deploy-Microservices/02-Next-Express-Mongo-Minikube/K8s/local/fe_next_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-client
  template:
    metadata:
      labels:
        app: next-client
    spec:
      containers:
      - name: next-client
        image: daspratha/next-fe:v4
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: next-service
spec:
  type: NodePort
  selector:
    app: next-client
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30003
