Deploy-Microservices/02-Next-Express-Mongo-Minikube/K8s/local/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-server
  template:
    metadata:
      labels:
        app: mongo-server
    spec:
      containers:
      - name: mongo-server
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: ClusterIP
  selector:
    app: mongo-server
  ports:
  - port: 27017
    targetPort: 27017
