Deploy-Microservices/02-Next-Express-Mongo-Minikube/K8s/local/next-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: next-app.10.96.0.1.nip.io  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next-service
            port:
              number: 3000
